# uw-pyrometer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
calibrations/: d.yaml
src/uw_pyrometer/: __init__.py  __main__.py  emissivity.py  omega_controller.py  plot_style.mplstyle  pyrometer.py
src/uw_pyrometer/cli/: __init__.py  emissivity.py  instrument.py
src/uw_pyrometer/data/: bandpass.csv  dc_4007.csv  default_calibration.yaml
tests/: test_pyrometer.py
